figured out overflow/background color incontinuity issue

--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,31 @@ Colors {
   box-sizing: border-box;
 }
 
-html, body {
-  margin: 0;
-  height: 100%;
+html {
+  margin: 0px;
+  min-height: 100%;
+  width: 100%;
+
+}
+
+main {
+  display: flex;
+  margin: 5px;
+}
+
+.mainBody {
+  margin: 0px;
+  min-height: 100%;
+  width: 100%;
   background: linear-gradient(to bottom left, #034078ff, #fefcfbff, #001f54ff)
 }
 
 /* Navbar Styling*/
-.jumbotron {
-  padding: 32px !important;
 
+.jumbotron {
+  width: 100%;
+  padding: 32px !important;
+  
 }
 
 .btn {
@@ -47,6 +62,11 @@ a.nav-link {
 
 
 /* Portfolio Page */
+
+.projectCont {
+  overflow: auto;
+}
+
 .img-container {
   position: relative;
   display: inline-block;
@@ -55,21 +75,21 @@ a.nav-link {
 .img-container .overlay {
   position:absolute;
   height: 100%;
-  width: 73%;  
+  width: 26.25rem;  
   opacity:0;
   transition:opacity 500ms ease-in-out;
 }
 
-/*
-.img-container:hover {
-  opacity: 0.33;
+.projectImg {
+  width: 26.25rem;
+  border-radius: 2%;
 }
-*/
 
 .overlay:hover {
   position:absolute;
   background:  #fefcfbff;
-  opacity: 0.95;
+  opacity: 0.90;
+  border-radius: 2%;
 
 }
 
@@ -90,6 +110,7 @@ a.appLink:hover {
   text-decoration:none; 
   cursor:pointer;  
 }
+
 
 /* Footer Styling */
 
